# TINF18C_Team_4_AMLEngine-DLL-Interface

./: .gitignore  README.md
EXECUTABLE/: User Manual.docx
PROJECT/BC/: TINF18C_BC_Team_4.docx  TINF18C_BC_Team_4_1v0.docx  TINF18C_BC_Team_4_1v1.docx
PROJECT/CRS/: TINF18C_CRS_Team_4.docx  TINF18C_CRS_Team_4_1v0.docx  TINF18C_CRS_Team_4_2v0.docx
PROJECT/PM/: TINF18C_PM_Team_4.docx  TINF18C_PM_Team_4_1v1.docx  TINF18C_PM_Team_4_1v2.docx  TINF18C_PM_Team_4_1v3.docx
PROJECT/Presentation/: TINF18C_Presentation_Team_4_1v0.pptx
PROJECT/Protokolle/: Gesprächsprotokoll_2019_09_27.docx  Gesprächsprotokoll_2019_10_11.docx  Gesprächsprotokoll_2019_10_21.docx  Gesprächsprotokoll_2019_10_25.docx  Gesprächsprotokoll_2019_10_31.docx  Gesprächsprotokoll_2019_11_06.docx
PROJECT/Protokolle/Semester 3/: Gesprächsprotokoll_2019_09_13.docx  Gesprächsprotokoll_2019_09_26.docx  Gesprächsprotokoll_2019_10_04.docx  Gesprächsprotokoll_2019_10_07.docx  Gesprächsprotokoll_2019_10_10.docx  Gesprächsprotokoll_2019_10_14.docx  Gesprächsprotokoll_2019_10_17.docx  Gesprächsprotokoll_2019_10_18.docx  Gesprächsprotokoll_2019_10_24.docx  Gesprächsprotokoll_2019_10_28.docx  Gesprächsprotokoll_2019_11_04.docx  Gesprächsprotokoll_Zusammenfassung.docx
PROJECT/Protokolle/Semester 4/: Besprechungsprotokolle Semester 4.docx
PROJECT/SAS/: TINF18C_SAS_Team_4_1v0.docx  TINF18C_SAS_Team_4_2v0.docx  ~$NF18C_SAS_Team_4_1v0.docx
PROJECT/SRS/: TINF18C_SRS_Team_4_1v0.docx  TINF18C_SRS_Team_4_2v0.docx  TINF18C_SRS_Team_4_2v1.docx
PROJECT/STP/: TINF18C_STP_Team_4_1v0.docx  TINF18C_STP_Team_4_1v0_old.docx  TINF18C_STP_Team_4_1v1.docx
PROJECT/STR/: TINF18C_STR_Team_4_1v0.docx  TINF18C_STR_Team_4_1v1.docx
SOURCE/MOD_010_C++Wrapper/: ToDo.md
SOURCE/MOD_010_C++Wrapper/docs/: compiling_with_gcc.md  glossary.md  introcution.md  main.md  scratch_file.txt
SOURCE/MOD_010_C++Wrapper/docs/c++ wrapper/: 1_preparation.md  2_add_sample_code.md  2_download_aml_engine.md  3_add_sample_code.md  3_compiling.md  4_compiling.md  common_warnings.md
SOURCE/MOD_010_C++Wrapper/example/: BSM_Project_210219_V3.1.aml  alink.lib  cordebug.tlb  corguids.lib  format.lib  helloworld.cpp  metahost.tlb  mscoree.tlb  mscorsn.lib  tlbref.lib
SOURCE/MOD_010_C++Wrapper/example/ConsoleApplication1/: ConsoleApplication1.sln
SOURCE/MOD_020_JSWrapper/Node Projekt/: .npmignore  AMLEngineWrapper.js  README.md  directDLL.js  library_interface.cs  main.js  main.py  package-lock.json  package.json  sample.js  sample2.js
SOURCE/MOD_020_JSWrapper/Node Projekt/dlls/: startUp.cs
SOURCE/MOD_020_JSWrapper/Node Projekt/src/: library_interface.cs
SOURCE/MOD_030_ConsoleApplication/ConsoleApplication/: ConsoleApplication.sln
SOURCE/MOD_030_ConsoleApplication/ConsoleApplication/ConsoleApplication/: CompressTypeEnum.cs  ConsoleApplication.csproj  DeCompressor.cs  Options.cs  PrintHelper.cs  Program.cs  Validator.cs
SOURCE/MOD_030_ConsoleApplication/example_files/: AutomationMLBMIRoleClassLib.aml  AutomationMLBaseRoleClassLib.aml  AutomationMLCMIRoleClassLib.aml  AutomationMLCSRoleClassLib.aml  AutomationMLDMIRoleClassLib.aml  AutomationMLExtendedRoleClassLib.aml  AutomationMLInterfaceClassLib.aml  CommunicationInterfaceClassLib.aml  CommunicationInterfaceClassLib_V1.0.0.aml  CommunicationRoleClassLib.aml  CommunicationRoleClassLib_V1.0.0.aml  ReadMe.txt  Rumpf1.aml  Rumpf1_Merged.aml  Rumpf_container.amlx  Splitter1.aml  Splitter2.aml  amlx.amlx  fehler.aml
Team_4_AMLEngine-DLL-Interface/example/AutomationMLEngineCpp/: Makefile  readme.txt
Team_4_AMLEngine-DLL-Interface/example/AutomationMLEngineCpp/AmlView/: Doxyfile  amlview.kdevelop
Team_4_AMLEngine-DLL-Interface/example/AutomationMLEngineCpp/AutomationMLEngine/Altova/: Altova.dsw  Altova.sln  Altova.vcproj  AltovaException.cpp  Makefile.am  SchemaTypeBinary.cpp  SchemaTypeBinary.h  SchemaTypeCalendar.cpp  SchemaTypeNumber.impl  StdAfx.cpp  StructInfo.cpp  StructInfo.h  common_typedefs.h
Team_4_AMLEngine-DLL-Interface/example/AutomationMLEngineCpp/AutomationMLEngine/AltovaXML/: AltovaXML.dsw  Doc.cpp  InternalXML.h  Makefile.am  StdAfx.h  XercesString.h  XmlException.cpp
Team_4_AMLEngine-DLL-Interface/example/AutomationMLEngineCpp/AutomationMLEngine/CAEX_ClassModelTest/: CAEX_ClassModelTest.h  Makefile.am  StdAfx.h
example/AutomationMLEngineCpp/AmlView/src/: amlview.h  main.cpp  (+2 more)
example/AutomationMLEngineCpp/AutomationMLEngine/: AUTHORS
example/AutomationMLEngineCpp/AutomationMLEngine/CAEX_ClassModel/: AttributeType.cpp  AttributeType.h  CAEXBasicObject.cpp  CAEXBasicObject.h  CAEXDocument.h  CAEXFileType.h  CAEX_ClassModel.cpp  CAEX_ClassModel.dsw  COLLADAReferenceAttributeType.cpp  ClassInstantiationException.cpp  ClassInstantiationException.h  GlobalUID.cpp  InstanceHierarchyType.cpp  InstanceHierarchyType.h  InterfaceClassType.cpp  InterfaceFamilyType.cpp  InternalLinkType.cpp  InternalLinkType.h  Makefile.am  MappingType.cpp  NominalScaledTypeType.h  RevisionType.cpp  RoleClassType.cpp  RoleFamilyType.cpp  RoleFamilyType.h  RoleRequirementsType.cpp  RoleRequirementsType.h  SchemaConformanceException.cpp  SchemaConformanceException.h  SystemUnitClassType.cpp  SystemUnitFamilyType.h  TypeBase.cpp  XMLTools.cpp  type_.CAttributeDataTypeType.h  type_.CAttributeNameMappingType.h  type_.CCAEXObject.h  type_.CChangeMode.h  type_.CCopyrightType.h  type_.CDescriptionType.h  type_.CInterfaceNameMappingType.h  (+26 more)
example/AutomationMLEngineCpp/AutomationMLEngineCppMain/: AutomationMLEngineCppMain.sln  AutomationMLEngineCppMain.vcproj
(+147 files in other folders)
