METASOURCES = AUTO
libAltova_so_LDFLAGS = -shared
bin_PROGRAMS = libAltova.so
libAltova_so_SOURCES = Altova.h AltovaDefs.h AltovaException.cpp \
	AltovaException.h SchemaTypeBinary.cpp SchemaTypeBinary.h SchemaTypeCalendar.cpp \
	SchemaTypeCalendar.h SchemaTypeNumber.cpp SchemaTypeNumber.h SchemaTypeNumber.impl \
	SchemaTypeString.cpp SchemaTypeString.h SchemaTypes.cpp SchemaTypes.h StdAfx.cpp StdAfx.h \
	StructInfo.cpp StructInfo.h common_typedefs.h exception.h t_defines.cpp t_defines.h \
	xs-datetime.cpp xs-datetime.h xs-types.cpp xs-types.h
AM_CXXFLAGS = -fPIC -fvisibility-inlines-hidden
