METASOURCES = AUTO
AM_CXXFLAGS = -fPIC
libAltovaXML_so_LDFLAGS = -shared
bin_PROGRAMS = libAltovaXML.so
libAltovaXML_so_SOURCES = AltovaXMLAPI.h Doc.cpp Doc.h InternalXML.cpp \
	InternalXML.h Node.cpp Node.h StdAfx.cpp StdAfx.h XercesString.h XmlException.cpp \
	XmlException.h
INCLUDES = -I$(top_srcdir)/Altova -I../../xerces-c-src_2_8_0/src
